--- a/module_4/M4_NB3_NetworkClustering.ipynb
+++ b/module_4/M4_NB3_NetworkClustering.ipynb
@@ -70,9 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -96,9 +94,11 @@
     "## For Community Detection (Louvain Method).\n",
     "import community\n",
     "\n",
+    "\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "from utils import draw_partitioned_graph\n",
+    "from utils import fancy_dendrogram\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (15, 9)\n",
     "plt.rcParams['axes.titlesize'] = 'large'"
@@ -121,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "call_adjmatrix = pd.read_csv('./call.adjmatrix', index_col=0)\n",
@@ -133,9 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display call graph object.\n",
@@ -144,7 +140,8 @@
     "\n",
     "#pos = nx.spring_layout(call_graph)\n",
     "pos = graphviz_layout(call_graph, prog='dot')\n",
-    "nx.draw_networkx(call_graph, pos=pos, node_color='#11DD11', with_labels=False)"
+    "nx.draw_networkx(call_graph, pos=pos, node_color='#11DD11', with_labels=False)\n",
+    "_ = plt.axis('off')"
    ]
   },
   {
@@ -164,9 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_hc(G, linkage='average'):\n",
@@ -175,14 +170,14 @@
     "    \"\"\" \n",
     "    \n",
     "    path_length=nx.all_pairs_shortest_path_length(G)\n",
-    "    distances=np.zeros((len(G),len(G)))\n",
+    "    distances=np.zeros((G.size(),G.size()))\n",
     "    \n",
-    "    for u,p in path_length.items():\n",
+    "    for u,p in dict(path_length).items():\n",
     "        for v,d in p.items():\n",
-    "            distances[G.nodes().index(u)][G.nodes().index(v)] = d\n",
-    "            distances[G.nodes().index(v)][G.nodes().index(u)] = d\n",
+    "            distances[list(G.nodes)[u]][list(G.nodes)[v]] = d\n",
+    "            distances[list(G.nodes)[v]][list(G.nodes)[u]] = d\n",
     "            if u==v: \n",
-    "                distances[G.nodes().index(u)][G.nodes().index(u)]=0\n",
+    "                distances[list(G.nodes)[u]][list(G.nodes)[u]]=0\n",
     "    # Create hierarchical cluster (HC).\n",
     "    Y=distance.squareform(distances)\n",
     "    if linkage == 'max':\n",
@@ -223,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Perform hierarchical clustering using 'average' linkage. \n",
@@ -242,12 +235,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hierarchy.dendrogram(Z)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will notice that the full dendrogram is unwieldy, and difficult to use or read. Fortunately, the `dendrogram` method has a feature that allows one to only show the `lastp` merged clusters, where $p$ is the desired number of last `p` merged clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.title('Hierarchical Clustering Dendrogram (pruned)')\n",
+    "plt.xlabel('sample index')\n",
+    "plt.ylabel('distance')\n",
+    "hierarchy.dendrogram(\n",
+    "    Z,\n",
+    "    truncate_mode='lastp',  # show only the last p merged clusters\n",
+    "    p=10,  # show only the last p merged clusters\n",
+    "    show_leaf_counts=True,  # numbers in brackets are counts for each leaf\n",
+    "    leaf_rotation=90,\n",
+    "    leaf_font_size=12)\n",
     "plt.show()"
    ]
   },
@@ -270,64 +287,37 @@
    "source": [
     "Now, you can finally retrieve the clusters, based on the analysis of the dendrogram. In this post-processing, there are different ways of determining $k$, the number of clusters to partition the data into. Scipy's hierarchical flat clustering function - \"``hierarchy.fcluster()``\" - is used to assign cluster membership by specifying a distance threshold, or the number of clusters required. In the function definition (above), you have been provided with a utility function, \"``get_cluster_membership()``\", which does the latter.\n",
     "\n",
-    "Selecting the number of clusters $k$ is, in general, an ill-posed problem. Different interpretations are possible, depending on the nature of the problem, the scale of the distribution of points in a data set, and the required clustering resolution. In agglomerative clustering, as used in the example above, you can get zero error for the objective function by considering each data point as its own cluster. Hence, the selection of $k$ invariably involves a trade-off maximum compression of the data (using a single cluster), and maximum accuracy by assigning each data point to its own cluster. In the following, the variation of the clustering error function, as the cluster size is increased, is shown on a scree plot, and the points of inflection (\"knee points\"), where such a trade-off is achieved, are highlighted."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(range(1, len(Z)+1), Z[::-1, 2])\n",
-    "knee = np.diff(Z[::-1, 2], 2)\n",
-    "#plt.plot(range(2, len(Z)), knee)\n",
-    "num_clust1 = knee.argmax() + 2\n",
-    "knee[knee.argmax()] = 0\n",
-    "num_clust1 = knee.argmax() + 2\n",
-    "knee[knee.argmax()] = 0\n",
-    "num_clust2 = knee.argmax() + 2\n",
-    "knee[knee.argmax()] = 0\n",
-    "num_clust3 = knee.argmax() + 2\n",
-    "plt.text(num_clust1, Z[::-1, 2][num_clust1-1], '<<=== knee point')\n",
-    "plt.text(num_clust2, Z[::-1, 2][num_clust2-1], '<<=== knee point')\n",
-    "plt.text(num_clust3, Z[::-1, 2][num_clust3-1], '<<=== knee point')\n",
-    "\n",
-    "plt.xlabel('Cluster size')\n",
-    "plt.ylabel('Height',)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "num_clust1, num_clust2, num_clust3"
+    "Selecting the number of clusters $k$ is, in general, an ill-posed problem. Different interpretations are possible, depending on the nature of the problem, the scale of the distribution of points in a data set, and the required clustering resolution. In agglomerative clustering, as used in the example above, you can get zero error for the objective function by considering each data point as its own cluster. Hence, the selection of $k$ invariably involves a trade-off maximum compression of the data (using a single cluster), and maximum accuracy by assigning each data point to its own cluster. The selection of an optimal $k$ can be done using automated techniques or manually."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the purposes of this illustrative example, suppose you conjecture that an optimal value is the mean of these three values."
+    "Here, identification of an appropriate cluster is ideally done manually as this has the advantages of gaining some insights into your data as well as providing an opportunity to [perform sanity checks](https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial). To select the cluster size, look for a large shift in the distance metric. In our example with dendrograms plots shown above, say a case has been made for an ideal cutoff of 0.3. The number of clusters is then simply the number of intersections of a horizontal line (with height of 0.3) with the vertical lines of the dendrogram. Therefore, 9 clusters would be obtained in this case as shown below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "opt_clust = round(1.0/3*(num_clust1+num_clust2+num_clust3))\n",
+    "fancy_dendrogram( Z, truncate_mode='lastp', p=12, leaf_rotation=90.,\n",
+    "    leaf_font_size=12.,\n",
+    "    show_contracted=False,\n",
+    "    annotate_above=10,\n",
+    "    max_d=0.3)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt_clust = 9\n",
     "opt_clust"
    ]
   },
@@ -341,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cluster_assignments = get_cluster_membership(Z, maxclust=opt_clust)"
@@ -359,17 +347,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "plt.axis('off')\n",
-    " \n",
-    "pos = graphviz_layout(call_graph, prog='dot')\n",
-    "nx.draw_networkx_nodes(call_graph, pos=pos, cmap=plt.cm.RdYlBu, node_color=list(cluster_assignments.values()))\n",
-    "nx.draw_networkx_edges(call_graph, pos=pos, alpha=0.5)\n",
-    "plt.show()"
+    "clust = list(set(cluster_assignments.values()))\n",
+    "clust\n",
+    "\n",
+    "cluster_centers = sorted(set(cluster_assignments.values()))\n",
+    "freq = [list(cluster_assignments.values()).count(x) for x in cluster_centers]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creata a DataFrame object containing list of cluster centers and number of objects in each cluster\n",
+    "df = pd.DataFrame({'cluster_centres':cluster_centers, 'number_of_objects':freq})\n",
+    "df.head(10)"
    ]
   },
   {
@@ -442,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here.\n"
@@ -495,61 +489,7 @@
     "1. Locally optimize the modularity to identify \"small\" communities.\n",
     "2. Aggregate nodes belonging to the same community, and create a new network with aggregated nodes as individual nodes.\n",
     "\n",
-    "Steps 1 and 2 are then repeated until a maximum of modularity produces a hierarchy of communities.\n",
-    "\n",
-    "Now you have the opportunity to identify communities in the “Family and Friends” call data set. First, compute the best partition."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "louvain_partition = community.best_partition(call_graph)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, identify and label the communities. This process should be similar to what you did when using agglomerative hierarchical clustering."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pos = graphviz_layout(call_graph, prog='dot')\n",
-    "nx.draw_networkx_nodes(call_graph, pos, cmap=plt.cm.RdYlBu, node_color=list(louvain_partition.values()))\n",
-    "nx.draw_networkx_edges(call_graph, pos, alpha=0.5)\n",
-    "plt.axis('off')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nodes that are close share the same color and, therefore, belong to the same cluster (despite the poor reflection of this in the visualization)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# View the contents of the louvain_partition variable.\n",
-    "print(louvain_partition)"
+    "Steps 1 and 2 are then repeated until a maximum of modularity produces a hierarchy of communities."
    ]
   },
   {
@@ -585,9 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create the spectral partition using the spectral clustering function from Scikit-Learn.\n",
@@ -597,9 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pos = graphviz_layout(call_graph, prog='dot')\n",
@@ -612,9 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(spectral_partition)"
@@ -632,18 +566,14 @@
     "</div>\n",
     "\n",
     "### Instructions\n",
-    "Compute the size of the clusters obtained using:\n",
-    ">   1. The Louvain method; and\n",
-    ">   2. Spectral graph partitioning.\n",
+    "Compute the size of each the clusters obtained using the spectral graph partitioning method.\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here."
@@ -677,18 +607,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -696,7 +622,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
