MIT BDSA P5 M5 update

--- a/module_5/M5_NB2_BandicootMachineLearning.ipynb
+++ b/module_5/M5_NB2_BandicootMachineLearning.ipynb
@@ -308,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read all the csv files in the in \"./data-fnf/records\" directory.\n",
@@ -336,7 +334,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -376,9 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%run plot_iris2d.py"
@@ -394,9 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# A demonstration of classification using linear and nonlinear algorithms.\n",
@@ -455,9 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot both segments.\n",
@@ -487,7 +478,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -551,9 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Review the target or response variable.\n",
@@ -571,9 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Convert gender labels to binary values (zero or one):\n",
@@ -628,9 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Assign predictors to a variable of ndarray (matrix) type .\n",
@@ -670,9 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X"
@@ -750,9 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "correlation_matrix(pd.DataFrame(np.c_[Xs,y]))"
@@ -773,9 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ycorr.xycor.plot(kind='line')"
@@ -803,9 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 5. Divide records in training and testing sets.\n",
@@ -830,9 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get average of 3-fold cross-validation score using an SVC estimator.\n",
@@ -865,9 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(scores)\n",
@@ -928,9 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The confusion matrix helps visualize the performance of the algorithm.\n",
@@ -943,24 +913,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the receiver operating characteristic curve (ROC).\n",
     "plt.figure(figsize=(20,10))\n",
+    "fg, ax = plt.subplots(1)\n",
     "probas_ = clf.predict_proba(X_test)\n",
     "fpr, tpr, thresholds = roc_curve(y_test, probas_[:, 1])\n",
     "roc_auc = auc(fpr, tpr)\n",
-    "plt.plot(fpr, tpr, lw=1, label='ROC fold (area = %0.2f)' % (roc_auc))\n",
-    "plt.plot([0, 1], [0, 1], '--', color=(0.6, 0.6, 0.6), label='Random')\n",
-    "plt.xlim([-0.05, 1.05])\n",
-    "plt.ylim([-0.05, 1.05])\n",
+    "ax.plot(fpr, tpr, lw=1, label='ROC fold (area = %0.2f)' % (roc_auc))\n",
+    "ax.plot([0, 1], [0, 1], '--', color=(0.6, 0.6, 0.6), label='Random')\n",
+    "ax.set_xlim([-0.05, 1.05])\n",
+    "ax.set_ylim([-0.05, 1.05])\n",
     "plt.xlabel('False Positive Rate')\n",
     "plt.ylabel('True Positive Rate')\n",
     "plt.title('Receiver operating characteristic example')\n",
-    "plt.axes().set_aspect(1)"
+    "ax.axes.set_aspect(1)\n"
    ]
   },
   {
@@ -1072,9 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Train classifiers.\n",
@@ -1086,9 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"The best parameters are %s with a score of %0.2f\"\n",
@@ -1110,9 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = clf.fit(X_train, y_train).predict(X_test)\n",
@@ -1141,9 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of random forest classifier, fit the data, and assess performance on test data.\n",
@@ -1160,9 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of logistic regression classifier, fit the data, and assess performance on test data.\n",
@@ -1179,9 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of decision tree classifier, fit the data, and assess performance on test data.\n",
@@ -1198,9 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of multilayer perceptron classifier (gradient descent), fit the data, and assess performance on test data.\n",
@@ -1212,9 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create an instance of multilayer perceptron classifier (stochastic gradient descent), fit the data, and assess performance on test data.\n",
@@ -1226,29 +1179,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot the results.\n",
     "colors = ['b', 'g', 'r','c','m','k','y']\n",
     "classifiers = ['svm','random_forest', 'logistic regression', 'decision tree', 'mlp_gd', 'mlp_sgd']\n",
-    "plt.figure(figsize=(20,10))\n",
+    "_ = plt.figure(figsize=(20,10))\n",
+    "f, ax = plt.subplots(1)\n",
+    "\n",
     "for i, cl in enumerate([clf, clf_rf, clf_logreg, clf_tree,clf_nn1, clf_nn2]):\n",
     "    probas_ = cl.predict_proba(X_test)\n",
     "    fpr, tpr, thresholds = roc_curve(y_test, probas_[:, 1])\n",
     "    roc_auc = auc(fpr, tpr)\n",
-    "    plt.plot(fpr, tpr, lw=1, label=classifiers[i]+' (AUC = %0.2f)' % (roc_auc))\n",
+    "    _ = ax.plot(fpr, tpr, lw=1, label=classifiers[i]+' (AUC = %0.2f)' % (roc_auc))\n",
     "    \n",
-    "plt.plot([0, 1], [0, 1], '--', color=colors[i], label='Random (AUC = 0.50)')\n",
-    "plt.xlim([-0.05, 1.05])\n",
-    "plt.ylim([-0.05, 1.05])   \n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.title('Receiver operating characteristic example')\n",
-    "plt.axes().set_aspect(1)\n",
-    "plt.legend(loc=\"lower right\")"
+    "_ = ax.plot([0, 1], [0, 1], '--', color=colors[i], label='Random (AUC = 0.50)')\n",
+    "ax.set_xlim([-0.05, 1.05])\n",
+    "ax.set_ylim([-0.05, 1.05])   \n",
+    "ax.set_xlabel('False Positive Rate')\n",
+    "ax.set_ylabel('True Positive Rate')\n",
+    "ax.set_title('Receiver operating characteristic example')\n",
+    "ax.axes.set_aspect(1)\n",
+    "_ = ax.legend(loc=\"lower right\")"
    ]
   },
   {
