MIT BDSA P5 M6 update

--- a/module_6/M6_NB2_Privacy_by_Design.ipynb
+++ b/module_6/M6_NB2_Privacy_by_Design.ipynb
@@ -118,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -158,7 +156,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -199,9 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print((k_anonymity(df, ['sex', 'birthday', 'zip'])))"
@@ -247,13 +242,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Reduce the zip code to zip district.\n",
-    "df['zip_district'] = [z / 1000 for z in df['zip']]\n",
+    "df['zip_district'] = [z // 1000 for z in df['zip']]\n",
     "df[['zip', 'zip_district']].head(3)"
    ]
   },
@@ -268,9 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# From birthday to birth year.\n",
@@ -289,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# From birthday to birth decade.\n",
@@ -310,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print((k_anonymity(df, ['sex', 'birth_year', 'zip_district'])))\n",
@@ -417,9 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load required libraries and methods.\n",
@@ -434,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load samples of the data set.\n",
@@ -459,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Compute unicity.\n",
@@ -570,7 +551,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
